# financial-statement-analysis

./: .env.example  .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
src/finstate/: __init__.py  compare.py  config.py  dcf.py  edgar.py  estimates.py  market.py  ratios.py  sector.py  ttm.py  unit_economics.py  validate.py
